# pytest-ads-testplan

./: README.md  README.rst  pyproject.toml  pytest_ads_testplan.py  requirements.txt  setup.py
pytest_ads_testplan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
